[gd_scene load_steps=5 format=3 uid="uid://tidw8epj6hco"]

[ext_resource type="Script" path="res://scripts/battle_2.0.gd" id="1_p23nf"]
[ext_resource type="PackedScene" uid="uid://cqnk3fok3i4bx" path="res://scenes/textbox.tscn" id="1_sw8go"]
[ext_resource type="PackedScene" uid="uid://bbnoa6cp5ucjw" path="res://scenes/player.tscn" id="2_vwux2"]
[ext_resource type="PackedScene" uid="uid://do2ac5etua6pm" path="res://scenes/enemy.tscn" id="4_csnmp"]

[node name="Battlescene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p23nf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Textbox" parent="." instance=ExtResource("1_sw8go")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.2
offset_bottom = 16.0
grow_vertical = 0

[node name="Player" parent="." instance=ExtResource("2_vwux2")]
layout_mode = 1
anchors_preset = 15
anchor_top = 0.0
offset_top = 200.0

[node name="Enemy" parent="." instance=ExtResource("4_csnmp")]
layout_mode = 1

[connection signal="start" from="Textbox" to="." method="_on_textbox_start"]
[connection signal="battle_lost" from="Player" to="." method="_on_player_battle_lost"]
[connection signal="deal_damage" from="Player" to="Enemy" method="_on_player_deal_damage"]
[connection signal="battle_won" from="Enemy" to="." method="_on_enemy_battle_won"]
[connection signal="enemy_attack" from="Enemy" to="Player" method="_on_enemy_enemy_attack"]
